--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,64 @@
 {
-    "name": "",
-    "short_name": "",
-    "description": "",
-    "start_url": "",
-    "display": "",
-    "background_color": "",
-    "theme_color": "",
-    "icons": [
-      {
-        "src": "/assets/images/icons/icon-192x192.png",
-        "sizes": "192x192",
-        "type": "image/png"
-      }
-    ]
-  }
-  
+  "name": "Lab8-Starter",
+  "short_name": "Hartej",
+  "description": "A web application for cooking enthusiasts",
+  "start_url": "/index.html",
+  "display": "standalone",
+  "background_color": "#ffffff",
+  "theme_color": "#ff5722",
+  "icons": [
+    {
+      "src": "/assets/images/icons/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    },
+    {
+      "src": "/assets/images/icons/icon-384x384.png",
+      "sizes": "384x384",
+      "type": "image/png"
+    },
+    {
+      "src": "/assets/images/icons/icon-256x256.png",
+      "sizes": "256x256",
+      "type": "image/png"
+    },
+    {
+      "src": "/assets/images/icons/icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/assets/images/icons/arrow-down.png",
+      "type": "image/png"
+    },
+    {
+      "src": "/assets/images/icons/5-star.svg",
+      "type": "image/svg+xml"
+    },
+    {
+      "src": "/assets/images/icons/4-star.svg",
+      
+      "type": "image/svg+xml"
+    },
+    {
+      "src": "/assets/images/icons/3-star.svg",
+      
+      "type": "image/svg+xml"
+    },
+    {
+      "src": "/assets/images/icons/2-star.svg",
+      
+      "type": "image/svg+xml"
+    },
+    {
+      "src": "/assets/images/icons/1-star.svg",
+      
+      "type": "image/svg+xml"
+    },
+    {
+      "src": "/assets/images/icons/0-star.svg",
+      
+      "type": "image/svg+xml"
+    }
+  ]
+}
